[package]
name = "bitcoinz"
version = "0.1.0"
edition = "2021"
description = "Rust implementation of BitcoinZ"
authors = ["Your Name <you@example.com>"]
license = "MIT"
repository = "https://github.com/jeelybeely/BTCZ-RUST-TRANSLATION2/tree/main"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Networking and Async
tokio = { version = "1.0", features = ["full"] }
warp = "0.3"
reqwest = { version = "0.11", features = ["json"] }

# Cryptography
sha2 = "0.10"
secp256k1 = "0.23"
ripemd160 = "0.10"
rand = "0.8"

# Blockchain Utilities
base58 = "0.2"
bech32 = "0.9"
bitcoin = "0.30"
bloom = "0.7"

# Logging and Debugging
log = "0.4"
fern = "0.6"
chrono = "0.4"
hex = "0.4"

# File Storage
sled = "0.34"

# Utilities
num-bigint = "0.4"
num-traits = "0.2"
crc32fast = "1.3"
clap = { version = "4.0", features = ["derive"] }

[features]
default = ["cli", "node"]
cli = []
node = []

[build-dependencies]
cc = "1.0"

[bin]
name = "bitcoinz-cli"
path = "src/bin/bitcoinz_cli.rs"

[[bin]]
name = "bitcoind"
path = "src/bin/bitcoind.rs"

[lib]
name = "bitcoinz"
path = "src/lib.rs"

[profile.release]
opt-level = 3
debug = true
